[workspace.package]
version = "0.28.0"
edition = "2024"

# See https://github.com/mozilla/application-services/blob/main/Cargo.toml for the reasons why we use this structure
[workspace]
members = [
  "crates/builder",
  "crates/cli",
  "crates/lsp",
  "crates/system-router",
  "crates/graphql-router",
  "crates/rpc-router",
  "crates/rpc-introspection",
  "crates/mcp-router",
  "crates/mcp-bridge",
  "crates/playground-router",
  "crates/server-actix",
  "crates/server-aws-lambda",
  "crates/server-cf-worker",
  "crates/server-common",
  "crates/testing",
  "crates/core-subsystem/*",
  "crates/postgres-subsystem/*",
  # Was "crates/deno-subsystem/*", but due to https://github.com/denoland/rusty_v8/issues/1798, exclude dynamic libs
  # We don't use dynamic libs currently, anyway
  "crates/deno-subsystem/deno-builder",
  "crates/deno-subsystem/deno-core-resolver",
  "crates/deno-subsystem/deno-model-builder",
  "crates/deno-subsystem/deno-graphql-builder",
  "crates/deno-subsystem/deno-graphql-model",
  "crates/deno-subsystem/deno-graphql-resolver",
  "crates/deno-subsystem/deno-rpc-resolver",
  "crates/deno-subsystem/deno-resolver",
  "crates/wasm-subsystem/*",
  "crates/subsystem-util/*",
  "crates/introspection-subsystem/*",
  "crates/introspection-util",
  "libs/exo-deno",
  "libs/exo-sql/core",
  "libs/exo-sql/model",
  "libs/exo-sql/pg",
  "libs/exo-sql/pg-connect",
  "libs/exo-sql/pg-schema",
  "libs/exo-sql/pg-testing",
  "libs/exo-wasm",
  "libs/exo-env",
]

# The default workspace member to run `cargo` commands on (we exclude server-aws-lambda here, since we don't need to build it during normal development)
# Pass --all to `cargo` to include it
default-members = [
  "crates/builder",
  "crates/cli",
  "crates/lsp",
  "crates/mcp-bridge",
  "crates/system-router",
  "crates/graphql-router",
  "crates/rpc-router",
  "crates/rpc-introspection",
  "crates/playground-router",
  "crates/server-actix",
  "crates/testing",
  "crates/core-subsystem/*",
  "crates/postgres-subsystem/*",
  "crates/deno-subsystem/deno-builder",
  "crates/deno-subsystem/deno-core-resolver",
  "crates/deno-subsystem/deno-model-builder",
  "crates/deno-subsystem/deno-graphql-builder",
  "crates/deno-subsystem/deno-graphql-model",
  "crates/deno-subsystem/deno-graphql-resolver",
  "crates/deno-subsystem/deno-rpc-resolver",
  "crates/deno-subsystem/deno-resolver",
  "crates/wasm-subsystem/*",
  "crates/subsystem-util/*",
  "crates/introspection-subsystem/*",
  "crates/server-common",
  "libs/exo-deno",
  "libs/exo-sql/core",
  "libs/exo-sql/model",
  "libs/exo-sql/pg",
  "libs/exo-sql/pg-connect",
  "libs/exo-sql/pg-schema",
  "libs/exo-sql/pg-testing",
  "libs/exo-wasm",
  "libs/exo-env",
]

resolver = "2"

[workspace.dependencies]
colored = "3"
anyhow = "1"
async-graphql-parser = "7.0.6"
async-graphql-value = "7.1.0"
async-recursion = "1.1.1"
async-stream = "0.3.6"
async-trait = "0.1"
postcard = { version = "1", features = ["use-std", "alloc"] }
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
codemap = "0.1.3"
codemap-diagnostic = "0.1"
ctor = "0.10.1"
http = "1"
clap = "4"

deno_ast = "0.53.1"
deno_error = "0.7.1"
deno_runtime = "0.254.0"
deno_core = "0.399.0"
deno_fs = "0.156.0"
deno_resolver = "0.77.0"
node_resolver = "0.84.0"
sys_traits = "0.1.27"

futures = "0.3.32"
heck = "0.5.0"
include_dir = "0.7.4"
indexmap = "2"
insta = { version = "1.47.2", features = ["redactions", "yaml"] }
jsonwebtoken = "10.3.0"
maybe-owned = "0.3.4"
rand = "0.10.1"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
sqlparser = "0.61.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde-saphyr = "0.0.23"
tempfile = "3"
test-log = "0.2.19"
thiserror = "2"
tracing = "0.1.41"
tokio = "1"
tokio-postgres = { version = "0.7", default-features = false }
deadpool-postgres = { version = "0.14.1", default-features = false }
tree-sitter = { git = "https://github.com/exograph/tree-sitter-c2rust.git", branch = "generate-loading-feature-flag" }
tree-sitter-c2rust = "0.25.1"
tree-sitter-generate = { git = "https://github.com/exograph/tree-sitter-c2rust.git", branch = "generate-loading-feature-flag" }
typed-generational-arena = { version = "0.2.9", features = ["serde"] }
uuid = "1"
url = "2.5.8"
wasmtime = "43.0.1"
wasi-common = "43.0.1"
wildmatch = "2.6.1"
which = "8.0.2"
wasm-bindgen-test = "0.3.65"
multiplatform_test = "0.6.0"
pluralizer = "0.5.0"
tracing-subscriber = "0.3"
toml = { version = "1.1.2", features = ["parse"] }
zip = { version = "8.3.1", default-features = false, features = ["deflate"] }

# reduce binary size, does not affect stack traces
[profile.dev]
debug = 1

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.release.package.server-cf-worker]
opt-level = "s" # optimize for size in release builds
