[package]
name = "payas-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clay"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = "3.2.16"
heck = "0.4.0"
notify = "4.0.17"
serde = { version = "1.0", features = ["derive"] }
tokio = "1"
rand = "0.8"
ctrlc = "3.2"

tracing = "0.1"

payas-sql = { path = "../payas-sql" }
payas-parser = { path = "../payas-parser" }
payas-test = { path = "../payas-test" }
payas-core-model = { path = "../payas-core-subsystem/payas-core-model" }
payas-core-model-builder = { path = "../payas-core-subsystem/payas-core-model-builder" }
payas-database-model = { path = "../payas-database-subsystem/payas-database-model" }


[dev-dependencies]
stripmargin = "0.1.1"
