[package]
name = "payas-deno"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.31"
async-trait = "0.1.53"
deno_runtime = "0.63.0"
deno_core = "0.137.0"
tokio = "1"
futures = "0.3"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_v8 = "0.48.0"
serde_json = "1.0"
tracing = "0.1"

[lib]
