[package]
name = "payas-model"
version = "0.1.0"
edition = "2021"

[dependencies]
typed-generational-arena = { version = "0.2", features = ["serde"] }
serde = "1.0"
payas-core-model = { path = "../payas-core-plugin/payas-core-model" }
payas-database-model = { path = "../payas-database-plugin/payas-database-model" }
payas-deno-model = { path = "../payas-deno-plugin/payas-deno-model" }
payas-wasm-model = { path = "../payas-wasm-plugin/payas-wasm-model" }

[lib]
