[package]
name = "payas-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
heck = "0.4.0"
tree-sitter = "0.20.6"
serde = { version = "1.0.136", features = ["derive"] }
lazy_static = "1.4.0"
codemap = "0.1.3"
codemap-diagnostic = "0.1.1"

typed-generational-arena = { version = "0.2", features = ["serde"] }
wildmatch = "2.1.0"
thiserror = "1.0.30"
payas-model = { path = "../payas-model" }
payas-sql = { path = "../payas-sql" }

[build-dependencies]
cc = "*"

[dev-dependencies]
insta = "1.14.0"
serde_json = "1.0"

[lib]
