[package]
name = "payas-parser"
version = "0.1.0"
edition = "2021"

[features]
test-context = []

[dependencies]
tree-sitter = "0.20.6"
serde = { version = "1.0.136", features = ["derive"] }
lazy_static = "1.4.0"
codemap = "0.1.3"
codemap-diagnostic = "0.1.1"

typed-generational-arena = { version = "0.2", features = ["serde"] }
wildmatch = "2.1.0"
thiserror = "1.0.30"
payas-sql = { path = "../payas-sql" }
payas-core-model = { path = "../payas-core-subsystem/payas-core-model" }
payas-core-model-builder = { path = "../payas-core-subsystem/payas-core-model-builder" }
payas-database-model-builder = { path = "../payas-database-subsystem/payas-database-model-builder" }
payas-deno-model = { path = "../payas-deno-subsystem/payas-deno-model" }
payas-deno-model-builder = { path = "../payas-deno-subsystem/payas-deno-model-builder" }
payas-wasm-model = { path = "../payas-wasm-subsystem/payas-wasm-model" }
payas-wasm-model-builder = { path = "../payas-wasm-subsystem/payas-wasm-model-builder" }

[build-dependencies]
cc = "*"

[dev-dependencies]
insta = "1.14.0"
serde_json = "1.0"

[lib]
