[package]
name = "payas-resolver-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-recursion = "1.0.0"
async-trait = "0.1.53"
futures = "0.3"
maybe-owned = "0.3.4"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.30"

payas-model = { path = "../payas-model" }
payas-sql = { path = "../payas-sql" }

[dev-dependencies]
tokio = "1"
payas-parser = { path = "../payas-parser" }


[lib]
