[package]
name = "payas-resolver-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql-value = "4.0.5"
async-recursion = "1.0.0"
async-trait = "0.1.53"
futures = "0.3"
maybe-owned = "0.3.4"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.30"
jsonwebtoken = "8.1.1"
cookie = "0.16"
tokio = "1"

tracing = "0.1"

payas-sql = { path = "../payas-sql" }
payas-core-model = { path = "../payas-core-plugin/payas-core-model" }

[dev-dependencies]
tokio = "1"
payas-parser = { path = "../payas-parser", features = ["test-context"]}


[lib]
