[package]
name = "payas-resolver-deno"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-graphql-value = "4.0.5"
async-recursion = "1.0.0"
async-trait = "0.1.53"
deno_core = "0.146.0"
futures = "0.3"
maybe-owned = "0.3.4"
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "1.0.30"
tokio = "1"

payas-model = { path = "../payas-model" }
payas-sql = { path = "../payas-sql" }
payas-deno = { path = "../payas-deno" }
payas-resolver-core = { path = "../payas-resolver-core" }

[dev-dependencies]
tokio = "1"
payas-parser = { path = "../payas-parser" }


[lib]
