[package]
name = "payas-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-recursion = "0.3.2"
async-graphql-parser = "3.0.19"
async-graphql-value = "3.0.19"
async-stream = "0.3.2"
async-trait = "0.1.52"
actix-web = "4.0.0-beta.18"
actix-cors = "0.6.0-beta.8"
actix-web-httpauth = "0.6.0-beta.7"
base64 = "0.13"
futures = "0.3"
futures-util = "0.3"
jsonwebtoken = "7.2.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
bincode = "1.2.1"
tokio-postgres = { version = "0.7.5", features = [
  "runtime",
  "with-chrono-0_4",
  "with-serde_json-1",
  "with-uuid-0_8"
] }
pg_bigdecimal = "0.1.4"
chrono = "0.4.19"
postgres-types = "0.2"
typed-arena = "2.0.1"
typed-generational-arena = { version = "0.2", features = ["serde"] }
maybe-owned = "0.3.4"
thiserror = "1.0.30"
uuid = "0.8"

payas-sql = { path = "../payas-sql" }
payas-parser = { path = "../payas-parser" }
payas-model = { path = "../payas-model" }
payas-deno = { path = "../payas-deno" }

[[bin]]
name = "clay-server"
path = "src/main.rs"
