[package]
name = "payas-sql"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1"
openssl = "0.10.30"
postgres = { version = "0.19.0", features = ["with-chrono-0_4"] }
postgres-openssl = "0.5.0"
postgres_array = "0.11.0"
chrono = "0.4.19"
r2d2 = "0.8"
r2d2_postgres = "0.18"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
maybe-owned = "0.3.4"
once_cell = "1.8.0"

[dev-dependencies]
serde_json = "1.0"

[lib]
