[package]
name = "payas-sql"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1"
openssl = "0.10.30"
tokio-postgres = { version = "0.7.5", features = [
  "runtime",
  "with-chrono-0_4",
  "with-serde_json-1",
  "with-uuid-0_8"
] }
postgres-openssl = "0.5.0"
postgres_array = "0.11.0"
deadpool-postgres = "0.10"
chrono = "0.4.19"

regex = "1"
serde = { version = "1.0", features = ["derive"] }
maybe-owned = "0.3.4"

[dev-dependencies]
serde_json = "1.0"

[lib]
