[package]
name = "payas-test"
version = "0.1.0"
authors = ["Andy Chun <andy.chun@payalabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
actix-web = ""
jsonwebtoken = ""
serde = { version = "1.0", features = ["derive"] }
serde_yaml = ""
serde_json = ""
futures = "0.3"
port_scanner = "0.1"
postgres = { version = "0.19.0", features = ["with-chrono-0_4"] }
postgres-openssl = "0.5.0"
rand = "0.8"
async-graphql-parser = "2.6.5"